@@ -216,6 +216,8 @@ class NCompConstraintSet;
  *   ::makeMatchingEquations() for further details.</li>
  * </ul>
  *
+ * \testpart
+ *
  * \todo \feature Implement quad-oct space.
  * \todo \optlong Investigate using sparse vectors for storage.
  *
@@ -539,6 +541,8 @@ class NNormalSurfaceVector : public NRay {
  * such as spun normal surfaces) are allowed; in these cases, the
  * corresponding coordinate lookup routines will return
  * NLargeInteger::infinity where appropriate.
+ *
+ * \testpart
  *
  * \todo \feature Calculation of Euler characteristic and orientability
  * for non-compact surfaces.
